# pycsr

./: .nojekyll  dispositiontableexample.docx  dmographics.docx  env-dev.html  env-pkg.html  env-uv.html  exposure.docx  index.html  index.qmd  overview_teae.docx  pkg-management.html  pkg-management.qmd  pkg-overview.html  pkg-structure.html  preface.html  pyproject.toml  references.html  search.json  sitemap.xml  submission-dryrun.html  submission-overview.html  submission-overview.qmd  submission-package.html  summary_teae_by_soc.docx  tlf-ae-specific.html  tlf-ae-summary.html  tlf-baseline.html  tlf-disposition.html  tlf-efficacy-ancova.html  tlf-overview.html  tlf-population.html
csr-practice/: .coverage  main.py  pyproject.toml
csr-practice/src/csr_practice/: calculations.py
csr-practice/tests/: test_calculations.py
csr-tables/: main.py  pyproject.toml
csr-tables/output/: adsl.csv
csr-tables/rtf/: demographics_shell.rtf  exposure_shell.rtf  overview_teae_shell.rtf  subject_disposition_shell.rtf  summary_teae_by_soc_shell.rtf
csr-tables/src/csr_tables/: demographics_shell.py  exposure_shell.py  overview_teae_shell.py  show_adsl.py  subject_disposition_shell.py  summary_teae_by_soc_shell.py
csr-tables/tests/: test_demographics_shell.py  test_exposure_shell.py  test_overview_teae_shell.py  test_subject_disposition_shell.py  test_summary_teae_by_soc_shell.py
dev-practice/: .coverage  main.py  pyproject.toml
dev-practice/src/dev_practice/: __init__.py  stats.py
dev-practice/tests/: test_stats.py
disposition-shell/: main.py  pyproject.toml
disposition-shell/src/disposition_shell/: disposition.py
pycsr-example/: main.py  pyproject.toml
site_libs/bootstrap/: bootstrap-bcbc2e5203870445334cd00219a46f68.min.css
slides/pharmads2026/part1/: custom.scss  index.qmd
subject-disposition/: main.py  pyproject.toml
subject-disposition/rtf/: subject_disposition_shell.rtf
subject-disposition/src/subject_disposition/: subjdisp.py
subject-disposition/tests/: test_subjdisp.py
